# darcs-buildpackage

./: COPYRIGHT  ChangeLog  Config.hs  Darcs.hs  Import.hs  Logging.hs  Makefile  Mirrors.hs  TODO  Utils.hs  Versions.hs  darcs-buildpackage.cabal  darcs-buildpackage.hs  dbp-get.hs  dbp-importdsc.hs  dbp-importorig.hs  dbp-markdeb.hs  setup.py  tbp-importdsc  tbp-importorig  tbp-initarchive  tbp-initrepos  tbp-markdeb  tla-buildpackage
debian/: README  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  tla-buildpackage-default.ex  tla-buildpackage.doc-base.EX  watch.ex
docs/: Makefile  SConstruct  dbp.sgml  man.darcs-buildpackage.sgml  man.dbp-get.sgml  man.dbp-importdsc.sgml  man.dbp-importorig.sgml  man.dbp-initarchive.sgml  man.dbp-markdeb.sgml  man.tbp-initarchive.sgml  man.tla-buildpackage.sgml  tbp.sgml
docs/chapters/: chapmac.ent  getstart.sgml  import.sgml  intro.sgml  regular.sgml
docs/mansgml/: com.author.sgml  com.copyright.sgml  com.environment.sgml  com.files.sgml  com.seealso.sgml  copyright.sgml  darcs-buildpackage.sgml  dbp-get.sgml  dbp-importdsc.sgml  dbp-importorig.sgml  dbp-initarchive.sgml  dbp-markdeb.sgml  manmac.ent  tbp-importdsc.sgml  tbp-importorig.sgml  tbp-initarchive.sgml  tbp-markdeb.sgml  tla-buildpackage.sgml
tbppy/: __init__.py  configs.py  extcmd.py  import.py  tbpconfig.py  tbpimport.py  tla.py  versions.py
