Name: darcs-buildpackage
Version: 0.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2003 - 2005 John Goerzen
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
Build-Depends: haskell-src, network, unix, parsec, MissingH>=0.10.7
GHC-Options: -O2

Executable: dbp-importorig
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
Main-Is: dbp-importorig.hs

Executable: dbp-importdsc
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
Main-Is: dbp-importdsc.hs

Executable: dbp-markdeb
Extensions: ExistentialQuantification, AllowOverlappingInstances,
    AllowUndecidableInstances
Main-Is: dbp-markdeb.hs
