Name: darcs-buildpackage
Version: 0.5.3
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2003 - 2005 John Goerzen
Build-Depends: haskell-src, network, unix, parsec, MissingH>=0.11.4

Executable: darcs-buildpackage
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
GHC-Options: -O2
Main-Is: darcs-buildpackage.hs

Executable: dbp-importorig
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
GHC-Options: -O2
Main-Is: dbp-importorig.hs

Executable: dbp-importdsc
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
GHC-Options: -O2
Main-Is: dbp-importdsc.hs

Executable: dbp-markdeb
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
GHC-Options: -O2
Main-Is: dbp-markdeb.hs

Executable: dbp-get
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
GHC-Options: -O2
Main-Is: dbp-get.hs
